# smiles2group

./: .gitignore  Makefile  README.md  pyproject.toml
group/: butyl.py  isobutyl.py
smiles2group/: __init__.py  __main__.py  cli.py  smiles2group.py
